--- a/css/main.css
+++ b/css/main.css
@@ -1,45 +1,62 @@
 body {
+	height: 4205px;	
 	font-family: 'Roboto', sans-serif;
+	background-image: url(file:///C:/Users/user/Desktop/Get_Your_Book/getyourbook/img/05Main.jpg);
+	background-height: 4205px;
+	background-position: top;
+	background-repeat: no-repeat; 
 }
 
 /********
 Main menu
 ********/
 
-.menu
-{
-font-family: 'Roboto', sans-serif;
-	font-weight: normal;
-	font-size: 14px;
-	line-height: 42px;
-	
-	text-align: right;
-    margin-top: 20px;
-	margin-right: 5%;
-
-  width: 164px;
-  height: 34px;
-  /* font-family: Roboto; */
-  font-size: 20px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.8;
-  letter-spacing: normal;
-  color: #00aba6;
-
-font-family: input-sans, sans-serif;
+.menu {
+	font-family: 'Roboto', sans-serif;
     font-weight: 400;
-	font-size: 14px;
+	font-size: 20px;
 	line-height: 42px;
 	
 	text-align: right;
     margin-top: 20px;
-	margin-right: 5%;
-
+	margin-right: 5%;	
 }
 
-li {
+.menu li {
 		display: inline;
-		padding-right: 40px;
+		padding-left: 20px;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+.menu a {
+	color: #00aba6;
+}
+.menu a:active {
+	color: #F4511E;
+}
+.menu a:hover {
+	c
+	color: #F4511E;
+}
+
+/*Footer*/
+
+.footer {
+	font-family: 'Roboto', sans-serif;
+	font-weight: 500;
+	font-style: medium;
+	font-size: 17px;
+	padding: 60px 0;
+	line-height: 20px;
+	text-align: left;
+	list-style: none;
+}
+
+.footer li {
+		list-style: none;
+		padding-left: 20px;
 }
