--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ MAIN PAGE
 }
 
 .button_main a{
-	margin-top: 12px;
+	/*margin-top: 12px;*/
 	padding: 8px 24px 10px 24px;
   	border-radius: 40px;
   	background-color: #d0021b;
@@ -119,6 +119,7 @@ MAIN PAGE
   	font-weight: 400;
   	color: white;
   	text-decoration: none;
+  	display: inline-block;
 }
 
 .button_main {
@@ -134,6 +135,7 @@ MAIN PAGE
   	font-weight: 400;
   	color: #000000;
   	text-decoration: none;
+  	display: inline-block;
 }
 
 .button_additional {
@@ -142,12 +144,53 @@ MAIN PAGE
 
 /*Box Block*/
 
-.box_img {
+.carousel-inner {
 	margin-top: -120px;
 }
 
 
+.box_description {
+	font-size: 17px;
+	line-height: 22px;
+	margin-bottom: 40px;
+}
 
+.box_name {
+	color: #00ABA6;
+	font-size: 20px;
+	line-height: 10px;
+}
+
+.box_price {
+	font-size: 20px;
+	font-weight: 700;
+	color: #00ABA6;
+	vertical-align: -4px;
+	height: 30px;
+}
+
+.carousel-indicators {
+	position: relative;
+	margin: 0;
+	display: inline-flex;
+}
+
+
+.carousel-indicators li {
+    border-radius: 12px;
+    width: 12px;
+    height: 12px;
+    background-color: #D0021B;
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon {
+	background-image: none;
+}
+
+
+.box_img img {
+	max-height: 380px;
+}
 
 
 
@@ -217,3 +260,7 @@ display: inline-block;
 	height: 50px;
 	margin: 30px 5px;
 }
+
+
+
+
