--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,8 @@
 body {
-	/*height: 4205px;	*/
+
 	font-family: 'Roboto', sans-serif;
-/*	background-height: 4205px;
-	background-position: top;
-	background-repeat: no-repeat; */
-	background-color: #f0f3f7
+	background-color: #f0f3f7;
+	font-size: 18px;
 }
 
 
@@ -16,11 +14,30 @@ h1 {
 	text-align: center;
 	font-size: 50px;
 	font-weight: 500;
+	margin: 160px 0 85px 0;
 }
 
 h2 {
 	text-align: center;
 	font-size: 34px;
+	font-weight: 700;
+	padding-top: 160px;
+	padding-bottom: 40px;
+	color: #333b46;
+}
+
+.months {
+	text-align: center; 
+	font-size: 34px;
+	font-weight: 700;
+	color: #333b46;
+}
+
+
+
+h3 {
+	text-align: center;
+	font-size: 24px;
 	font-weight: 700;
 	padding-top: 160px;
 	padding-bottom: 40px;
@@ -73,13 +90,14 @@ a {
 }
 
 
-.icon_cart:hover .img_cart_top {
+.menu_cart:hover .img_cart_top {
 	display: inline-block;
 }
 
-.icon_cart:hover .img_cart_normal {
+.menu_cart:hover .img_cart_normal {
 	display: none;
 }
+
 
 
 /*
@@ -87,7 +105,7 @@ Side menu*/
 .side_menu {
 	text-align: left;
 	position: fixed;
-	right: 38px;
+	right: 14px;
 	top: 35%;
 	list-style: none;
 	font-size: 13px;
@@ -110,14 +128,14 @@ MAIN PAGE
 	height: 600px;
 }
 
-.button_main a{
+.button_main a {
 	/*margin-top: 12px;*/
 	padding: 8px 24px 10px 24px;
   	border-radius: 40px;
   	background-color: #d0021b;
   	font-size: 14px;
   	font-weight: 400;
-  	color: white;
+  	color: #fff;
   	text-decoration: none;
   	display: inline-block;
 }
@@ -178,13 +196,27 @@ MAIN PAGE
 
 .carousel-indicators li {
     border-radius: 12px;
-    width: 12px;
-    height: 12px;
+    width: 10px;
+    height: 10px;
     background-color: #D0021B;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #D0021B;
 }
 
 .carousel-control-next-icon, .carousel-control-prev-icon {
 	background-image: none;
+	width: 120px;
+	height: 500px;
+}
+
+
+.carousel-control-next {
+	right: 60px;
+}
+
+.carousel-control-prev {
+	left: 30px;
 }
 
 
@@ -193,18 +225,59 @@ MAIN PAGE
 }
 
 
+.carousel-control-next-icon img, .carousel-control-prev-icon img {
+    margin-top: 230px;
+}
+
+
+/*Block Prices*/
+.price, .month_price {
+text-align: center;
+font-weight: 300;
+margin: 0;
+font-size: 20px;
+}
+
+
+
+/*Block Steps*/
+
+.block_step {
+	padding-left: 50px;
+	padding-right: 5px;
+	margin: 0;
+}
+
 
 
 /*Reviews*/
 
 .review_name div {
-display: inline-block;
+	display: inline-block;
+	margin-bottom: 12px;
+}
+
+.review_name p {
+font-size: 17px;
+font-weight: 500;
+color: #333B46;
+margin-left: 10px;
 }
 
 
 .review_name img {
 	border-radius: 50%;
+	width: 60px;
+	height: 60px;
 }
+
+
+
+/*Write To Us Block*/
+
+
+
+
 
 /*Footer*/
 
@@ -223,9 +296,6 @@ display: inline-block;
 	color: #071b35;
 }
 
- 
-
-/*Footer*/
 
 .footer {
 	font-size: 17px;
