--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ MAIN PAGE
     border-radius: 12px;
     width: 10px;
     height: 10px;
-    background-color: #D0021B;
+    background-color: #fff;
     border-style: solid;
     border-width: 1px;
     border-color: #D0021B;
