--- a/css/main.css
+++ b/css/main.css
@@ -188,9 +188,12 @@ MAIN PAGE
 }
 
 .carousel-indicators {
-	position: relative;
+	position: absolute;
+	top: 110px;
+	left: -200px;
 	margin: 0;
 	display: inline-flex;
+	height: 12px;
 }
 
 
@@ -202,6 +205,10 @@ MAIN PAGE
     border-style: solid;
     border-width: 1px;
     border-color: #D0021B;
+}
+
+.carousel-indicators .active  {
+	background-color: #D0021B;
 }
 
 .carousel-control-next-icon, .carousel-control-prev-icon {
