index.html main.css
main logo
main description text

--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,6 @@ h3 {
 }
 
 
-
 /********
 Main menu
 ********/
@@ -128,6 +127,16 @@ MAIN PAGE
 	height: 600px;
 }
 
+#main_description_text {
+	text-align: center;
+	font-size: 30px;
+	font-weight: 400;
+	margin-top: 24px;
+	margin-bottom: 40px;
+	color: #ffffff;
+}
+
+ 
 .button_main a {
 	/*margin-top: 12px;*/
 	padding: 8px 24px 10px 24px;
