--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,7 @@ Main menu
 	top: 20px;
 	right: 42px;
 	z-index: 100;
+	width: 100%;
 }
 
 .menu li {
@@ -374,9 +375,22 @@ margin-left: 10px;
 
 .icons_row img {
 	height: 30px;
-	margin: 30px 5px;
+	margin: 25px 5px;
 }
 
 
+/********
+About Us
+*********/
 
 
+/*Header Block*/
+
+#header_aboutus {
+	background-color: #f0f3f7; 
+	height: 600px;
+}
+
+.header_aboutus p {
+
+}
