--- a/css/cart.css
+++ b/css/cart.css
@@ -1,8 +1,15 @@
 
 
-.cart_element_odd p{
+.cart_element_odd p,
+.cart_element_even p{
 	font-size: 16px;
 
+}
+
+.cart_element_odd, .cart_element_even {
+	height: 150px;
+	padding-top: 15px;
+	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.25);
 }
 
 .user_choices p {
@@ -17,6 +24,26 @@
 .odd_bkg {
 	height: 150px;
 	/*width: 80%; */
-	background-color: #F7F7F7;
+	background-color: #fff;
 
+}
+
+.even_bkg {
+	height: 150px;
+	/*width: 80%; */
+	background-color: #F7F7F7;
+}
+
+
+.cart_element_odd:hover p {
+display: none;
+}
+
+.cart_cols {
+	margin: 0;
+	font-size: 12px;
+}
+
+.col-1 {
+	padding: 0;
 }
