--- a/css/main.css
+++ b/css/main.css
@@ -26,12 +26,7 @@ h2 {
 	color: #333b46;
 }
 
-.months {
-	text-align: center; 
-	font-size: 34px;
-	font-weight: 700;
-	color: #333b46;
-}
+
 
 
 
@@ -51,14 +46,17 @@ Main menu
 
 .menu {
     font-weight: 400;
-	font-size: 20px;
-	line-height: 42px;
+	font-size: 17px;
+	line-height: 40px;
 	text-align: right;
 	position: fixed;
-	top: 20px;
-	right: 42px;
+	top: 0;
+	/*right: 2px;*/
+	padding-right: 42px;
 	z-index: 100;
 	width: 100%;
+	background-color: rgba(255, 255, 255, 0.9);
+	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.25);
 }
 
 .menu li {
@@ -200,6 +198,7 @@ MAIN PAGE
 	margin-top: 17px;
 }
 
+
 /*Box Block*/
 
 .carousel-inner {
@@ -286,6 +285,25 @@ font-size: 20px;
 }
 
 
+.months_books {
+	height: 150px;
+	margin-bottom: -20px;
+}
+
+
+.months {
+	text-align: center; 
+	font-size: 28px;
+	font-weight: 700;
+	color: #333b46;
+	padding-top: 20px;	
+}
+
+
+.block_prices p {
+	margin: 0;
+}
+
 
 /*Block Steps*/
 
@@ -322,9 +340,17 @@ margin-left: 10px;
 
 /*Write To Us Block*/
 
+.form-control {
+	/*border: */
+	border-width: 0 0 2px 0;
+	background-color: #f0f3f7;
+	border-radius: 0;
+	border-color: #00ABA6;
+}
 
-
-
+.form-group label {
+	margin: 0;
+}
 
 /*Footer*/
 
@@ -384,6 +410,7 @@ About Us
 *********/
 
 
+
 /*Header Block*/
 
 #header_aboutus {
@@ -397,3 +424,6 @@ About Us
 .header_aboutus p {
 	margin-top: 60px;
 }
+
+
+
