--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,11 @@ h3 {
 }
 
 
+
+img {    
+	max-width: 100%;
+}
+
 /********
 Main menu
 ********/
@@ -431,6 +436,10 @@ About Us
 	margin-top: 60px;
 }
 
+.about_text {
+	margin: 100px 20px 0px 20px;
+}
+
 
 
 
@@ -438,11 +447,11 @@ About Us
 /*********
 Page FAQ
 *********/
-
+/*
 .collapse p {
 	max-width: 1100px;
 /*	font-size: 17px;*/
-}
+
 
 .clickable {
 	background-color: #D0021B;
