--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ h1 {
 	font-size: 50px;
 	font-weight: 500;
 	margin: 160px 0 85px 0;
+	width: 100%;
 }
 
 h2 {
@@ -77,7 +78,7 @@ a {
 .menu a {
 	color: #00aba6;
 }
-.menu a:active {
+.menu a.active {
 	color: #D0021B;
 }
 .menu a:hover {
@@ -121,9 +122,6 @@ a {
 	color: #9B9B9B;
 }
 
-.side_menu a:active {
-	color: #d0021B;
-}
 
 .side_menu a:hover {
 	text-decoration: none;
@@ -131,20 +129,25 @@ a {
 }
 
 .red_dot {
-	height: 10px;
-	width: 10px;
+	height: 8px;
+	width: 8px;
 	border-radius: 5px;
   	background-color: none;
   	display: inline-block;
 }
 
-.side_menu a:target {
-	color: #d0021b;
-}
+
 
 .side_menu a:hover .red_dot {
 	background-color: #d0021b;
 }
+
+
+.side_menu a.active .red_dot {
+	background-color: #d0021b;
+}
+
+
 
 
 
@@ -424,12 +427,12 @@ About Us
 
 /*Header Block*/
 
-#header_aboutus {
-	background-color: #f0f3f7; 
-	/*background-image: url(../img/bitmap-copy-4.png);
+.block_about_picture {
+	/*background-color: #f0f3f7; */
+	background-image: url(../img/spikes.png);
 	background-repeat: no-repeat;
-	background-position: right bottom 80%;
-	height: 164px;*/
+	background-position: right 50%;
+	/*height: 164px;*/
 }
 
 .header_aboutus p {
@@ -441,7 +444,11 @@ About Us
 }
 
 
+/*Modals*/
+.modal-content .form-control {
+	background-color: #fff;
 
+}
 
 
 /*********
@@ -463,4 +470,14 @@ Page FAQ
 	border: 0px;
 	border-color: #f0f3f7;
 }*/
+
+
+
+
+section{
+	width: 100%;
+}
+
+
+
 
