--- a/css/main.css
+++ b/css/main.css
@@ -471,13 +471,11 @@ Page FAQ
 	border-color: #f0f3f7;
 }*/
 
+/*********
+Page Boxes
+*********/
 
-
-
-section{
-	width: 100%;
-}
-
-
-
+/*.picture_page img {
+	height: 500px;
+}*/
 
