Write To Us, Mountains padding

--- a/css/main.css
+++ b/css/main.css
@@ -161,8 +161,9 @@ MAIN PAGE
 #header_main {
 	background-image: url(../img/space.png);
 	background-repeat: no-repeat; 
+	background-size: contain;
 	/*height: 600px;*/
-	height: 100vh;
+	height: 60vh;
 	text-align: center;
 }
 
@@ -386,6 +387,12 @@ margin-left: 10px;
 	font-size: 20px;
 	text-align: center;
 	color: #071b35;
+	background-image: url(../img/mountains.png);
+	background-repeat: no-repeat; 
+	background-position: right bottom;
+	background-size: 70%;
+	/*height: 560px;*/
+	padding-bottom: 20%;
 }
 
 
@@ -399,12 +406,6 @@ margin-left: 10px;
 		padding-left: 20px;
 }
 
-.block_writetous {
-	background-image: url(../img/mountains.png);
-	background-repeat: no-repeat; 
-	background-position: right bottom;
-	height: 600px;
-}
 
 .green {
   height: 126px;
