--- a/css/mobile.css
+++ b/css/mobile.css
@@ -96,10 +96,10 @@
 
 
 @media only screen and (min-width: 1024px) {
-#header_main {
+/*#header_main {
 	background-size: 84%;
-	/*height: 100%;*/
-}
+	/*height: 100%;
+}*/
 
 .carousel-indicators {
 	top: 160px;
