--- a/css/main.css
+++ b/css/main.css
@@ -410,11 +410,11 @@ margin-left: 10px;
 	color: #ffffff;
 }
 .footer a.active {
-	color: #D0021B;
+	color: #ff9999;
 }
 .footer a:hover {
 	text-decoration: none;
-	color: #D0021B;
+	color: #ff9999;
 }
 
 .green {
@@ -478,7 +478,7 @@ Page FAQ
 
 .clickable {
 	background-color: #ff9999;
-	color: #fff;
+	color: #686869;
 	cursor: pointer;
 }
 
@@ -495,5 +495,10 @@ Page Boxes
 .picture_page img {
 	height: auto;
 	width: 100%;
+	/*height: 80vh;
+	background-image: url(/img/mountains.png);
+	background-repeat: no-repeat; 
+	background-position: right bottom;
+	background-size: 70%;*/
 }
 
