--- a/css/mobile.css
+++ b/css/mobile.css
@@ -109,3 +109,14 @@
 }
 
 
+
+
+
+@media only screen and (min-width: 1000px) and (max-width: 1400px) {
+	#header_main {
+		background-size: 100%;
+		height: 600px;
+	}
+}
+
+
