--- a/css/mobile.css
+++ b/css/mobile.css
@@ -16,9 +16,9 @@
 	}
 
 
-	.menu img {
+	/*.menu img {
 		display: none;
-	}
+	}*/
 
 	.carousel-inner {
 	margin-top: -200px;
@@ -46,10 +46,10 @@
 		margin-top: 210px;
 	}
 
-	.carousel-indicators {
+	/*.carousel-indicators {
 		left: 0;
 		top: 0;
-	}
+	}*/
 
 	.box_description {
 	margin-top: 20px;
@@ -90,33 +90,47 @@
 	.block_about_picture {
 		background: none;
 	}
-}
 
-
-
-
-@media only screen and (min-width: 1024px) {
-/*#header_main {
-	background-size: 84%;
-	/*height: 100%;
-}*/
-
-.carousel-indicators {
-	top: 160px;
-	left: -70%;
-}
-
-}
-
-
-
-
-
-@media only screen and (min-width: 1000px) and (max-width: 1400px) {
-	#header_main {
-		background-size: 100%;
-		height: 600px;
+	.mobile_margin {
+		margin: 0 1%;
 	}
 }
 
+
+
+
+
+
+
+
+
+
+@media only screen and (min-width: 1200px) and (max-width: 1400px) {
+	#header_main {
+		background-size: 77%;
+		height: 700px;
+	}
+
+	/*.carousel-inner {
+		margin-top: -18%;
+	}*/
+}
+
+
+
+@media only screen and (min-width: 1000px) and (max-width: 1200px) {
+	#header_main {
+		background-size: 84%;
+		height: 700px;
+	}
+
+/*	.carousel-inner {
+		margin-top: -20%;
+	}
+*/
+
+	/*.carousel-indicators {
+	top: 30%;
+	left: -60%;
+}*/
 
