--- a/css/main.css
+++ b/css/main.css
@@ -236,8 +236,9 @@ MAIN PAGE
 }
 
 .box_name {
-	color: #00ABA6;
-	font-size: 20px;
+	color: #1C2C38;
+	font-weight: 700;
+	font-size: 24px;
 	line-height: 10px;
 }
 
