--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ Main menu
 .menu {
     font-weight: 400;
 	font-size: 17px;
-	line-height: 40px;
+	line-height: 60px;
 	text-align: right;
 	position: fixed;
 	top: 0;
@@ -106,7 +106,12 @@ a {
 	width: 23px;
 }
 
-
+.logo {
+	height: 40px; 
+	position: absolute; 
+	left: 75px;
+	top: 10px;
+}
 
 
 /*Side menu*/
@@ -117,7 +122,7 @@ a {
 	right: 14px;
 	top: 35%;
 	list-style: none;
-	font-size: 13px;
+	font-size: 16px;
 	line-height: 26px;
 	color: #9B9B9B;
 	z-index: 999;
@@ -225,7 +230,7 @@ MAIN PAGE
 
 .carousel-inner {
 	margin-top: -20%;
-	height: 500px;
+/*	height: 500px;*/
 }
 
 
@@ -248,6 +253,7 @@ MAIN PAGE
 	color: #00ABA6;
 	vertical-align: -4px;
 	height: 30px;
+	margin-left: 15px;
 }
 
 .carousel-indicators {
@@ -274,30 +280,47 @@ MAIN PAGE
 	background-color: #D0021B;
 }
 
-.carousel-control-next-icon, .carousel-control-prev-icon {
+/*.carousel-control-next-icon, .carousel-control-prev-icon {
 	background-image: none;
 	width: 120px;
 	height: 500px;
 }
-
+*/
 
 .carousel-control-next {
-	right: 60px;
+	right: 50px;
+
 }
 
 .carousel-control-prev {
-	left: 30px;
+	left: 50px;
+	
 }
 
+
+
+.carousel-control-prev-icon {
+ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+
+
+
+.box_img {
+	text-align: center;
+}
 
 .box_img img {
-	max-height: 380px;
+	max-height: 560px;
 }
 
-
+/*
 .carousel-control-next-icon img, .carousel-control-prev-icon img {
     margin-top: 230px;
-}
+}*/
 
 
 /*Block Prices*/
@@ -310,14 +333,14 @@ font-size: 20px;
 
 
 .months_books {
-	height: 150px;
-	margin-bottom: -20px;
+	height: 200px;
+	margin-bottom: 0;
 }
 
 
 .months {
 	text-align: center; 
-	font-size: 28px;
+	font-size: 32px;
 	font-weight: 700;
 	color: #333b46;
 	padding-top: 20px;	
@@ -364,6 +387,10 @@ margin-left: 10px;
 }
 
 
+
+.review_body {
+	margin-right: 20px;
+}
 
 /*Write To Us Block*/
 
