--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ body {
 }
 
 
+header {
+	max-width: 100%;
+}
+
 .container-fluid {
 /*	padding: 0 42px;*/
 }
@@ -26,7 +30,6 @@ h2 {
 	padding-bottom: 40px;
 	color: #333b46;
 }
-
 
 
 
@@ -116,13 +119,19 @@ a {
 
 
 .cart-cont-num {
-	background-color: #fff;
-	display: inline;
-	color: #D0021B;
-	font-size: 18px;
-	position: fixed;
-	width: 22px;
-	font-weight: 500;
+    background-color: #D0021B;
+    display: block;
+    color: #fff;
+    font-size: 17px;
+    position: absolute;
+    width: 28px;
+    height: 28px;
+    border-radius: 30px;
+    font-weight: 400;
+    text-align: center;
+    top: 14px;
+    left: -4px;
+    line-height: 1.8;
 
 }
 
@@ -190,6 +199,11 @@ MAIN PAGE
 
 }
 
+#header_main img {
+	margin-top: 14%;
+}
+
+
 #main_description_text {
 	text-align: center;
 	font-size: 30px;
@@ -199,7 +213,7 @@ MAIN PAGE
 	color: #ffffff;
 }
 
- 
+
 .button_main a {
 	/*margin-top: 12px;*/
 	padding: 8px 24px 10px 24px;
@@ -216,6 +230,7 @@ MAIN PAGE
 .button_main {
 	margin-top: 12px;
 	cursor: pointer;
+	color: #fff;
 }
 
 .button_additional a{
@@ -272,7 +287,7 @@ MAIN PAGE
 	position: inherit;
 	/*top: 110px;
 	left: -200px;*/
-	margin: 0;
+	margin: 0 0 22px 0;
 	display: inline-flex;
 	height: 12px;
 }
@@ -301,22 +316,25 @@ MAIN PAGE
 
 .carousel-control-next {
 	right: 50px;
-
+	top: 110px;
 }
 
 .carousel-control-prev {
 	left: 50px;
-	
+	top: 110px;
 }
-
 
 
 .carousel-control-prev-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+ width: 26px;
+ height: 26px;
 }
 
 .carousel-control-next-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+  width: 26px;
+  height: 26px;
 }
 
 
@@ -369,12 +387,36 @@ font-size: 20px;
 
 /*Block Steps*/
 
-.block_step {
-	padding-left: 50px;
-	padding-right: 5px;
-	margin: 0;
+
+
+.block_order img{
+	text-align: center;
+	/*max-width: 70%;*/
+	height: 200px;
 }
 
+
+.step_2, .step_3 {
+	margin-top: -180px;
+}
+
+.step_3 img {
+	max-width: 65%;
+}
+
+
+.steps_image {
+	text-align: center;
+	margin-left: -30px;
+}
+
+.step_number{
+	color: #1C2C38;
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 10px;
+
+}
 
 
 /*Reviews*/
@@ -445,7 +487,7 @@ margin-left: 10px;
 	background-repeat: no-repeat; 
 	background-position: right bottom;
 	background-size: 95%;
-	width: 100vw;
+	width: 100%;
 }
 
 .footer li {
@@ -467,6 +509,7 @@ margin-left: 10px;
 .green {
   height: 126px;
   background-color: #009276;
+ 
 }
 
 .green li {
@@ -487,15 +530,11 @@ About Us
 *********/
 
 
-
 /*Header Block*/
 
 .block_about_picture {
-	/*background-color: #f0f3f7; */
-	background-image: url(../img/spikes.png);
 	background-repeat: no-repeat;
 	background-position: right 50%;
-	/*height: 164px;*/
 }
 
 .header_aboutus p {
@@ -506,12 +545,38 @@ About Us
 	margin: 80px 20px 0px 20px;
 }
 
+.why_us_image {
+	text-align: center;
 
-/*Modals*/
+}
+
+.why_us_image img {
+	max-width: 60%;
+	margin-bottom: 40px;
+}
+
+.block_why_us {
+	font-size: 17px;
+}
+
+
+
+
+
+
+
+
+/********
+  Modals
+********/
+
+
 .modal-content .form-control {
 	background-color: #fff;
 
 }
+
+
 
 
 /*********
@@ -524,28 +589,73 @@ Page FAQ
 
 
 .clickable {
-	background-color: #FFADA3;
-	color: #5E5E5E;
+	/*background-color: #FFADA3;*/
+	background-color: #009276;
+	/*color: #5E5E5E;*/
+	color: #fff;
 	cursor: pointer;
 }
 
-/*.show {
-	background-color: #f0f3f7;
-	border: 0px;
-	border-color: #f0f3f7;
-}*/
+
 
 /*********
 Page Boxes
 *********/
 
-.picture_page img {
-	height: auto;
+
+.boxes_images img {
 	width: 100%;
-	/*height: 80vh;
-	background-image: url(/img/mountains.png);
-	background-repeat: no-repeat; 
-	background-position: right bottom;
-	background-size: 70%;*/
+	object-fit: cover;
+	height: 100%;
 }
+
+.box_image {
+	overflow: hidden;
+	height: 35vh;
+
+}
+
+
+.boxes_images .row {
+	height: 100%;
+	max-height: 600px;
+	margin-bottom: 20px;
+}
+
+
+#mix_grid {
+	background-image: url(../img/slice_mix.png);
+	background-repeat: no-repeat;
+	background-position: bottom center;
+	background-size: 130px;
+}
+
+#fiction_grid{
+	background-image: url(../img/slice_fiction.png);
+	background-repeat: no-repeat;
+	background-position: 60% bottom;
+	background-size: 100px;
+}
+
+#non-fiction_grid{
+	background-image: url(../img/slice_non-fiction.png);
+	background-repeat: no-repeat;
+	background-position: 60% 92%;
+	background-size: 88px;
+}
+
+#self-improvement_grid {
+	background-image: url(../img/slice_self-improvement.png);
+	background-repeat: no-repeat;
+	background-position: 40% 85%;
+	background-size: 110px;
+}
+
+#english_grid {
+	background-image: url(../img/slice_english.png);
+	background-repeat: no-repeat;
+	background-position: 47% 79%;
+	background-size: 100px;
+}
+
 
